--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.18.0
+  flutter_decorated_text: ^1.0.12
+  url_launcher: ^6.1.9
 
 dev_dependencies:
   flutter_test:
